--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "-": "^0.0.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.62.15",
     "@trivago/prettier-plugin-sort-imports": "^5.2.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
@@ -22,6 +25,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-simple-star-rating": "^5.1.7",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.0"
   },
   "devDependencies": {
